Fixed mobile nav title covering first selector

--- a/src/app/components/modals/global.scss
+++ b/src/app/components/modals/global.scss
@@ -31,6 +31,7 @@
 	left: 0;
 	width: calc(100% - 40px);
 	margin: 20px;
+	padding-bottom: 0;
 }
 
 .choices {
